--- a/hunt.html
+++ b/hunt.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h2> Bird Hunt by Reethu Gopireddy</h2>
+    <h2> Bird Hunt by Zabheen Shaik</h2>
     <div class="container-fluid ">
         <div class="d-inline p-2 bg-primary text-black centre">Click on the squares to search for bird.</div>
         <div class="d-inline p-2 bg-success text-white" id="shakes"> Number of shakes is zero.</div>
